--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,7 @@ dependencies:
   pre:
 #    - npm install -g grunt-cli bower
     - bundle install
-    - cd ../../ui/Front && npm install && bower install
+    - cd ui/Front && npm install && bower install
 
   # we automatically cache and restore many dependencies between
   # builds. If you need to, you can add custom paths to cache:
