--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,8 @@
 machine:
   java:
     version: oraclejdk7
+  node:
+    version: 0.10.26
   timezone:
     Asia/Tokyo
   services:
@@ -20,14 +22,13 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
-#    - npm install -g grunt-cli bower
+    - npm install -g grunt-cli bower
     - bundle install
     - cd ui/Front && npm install && bower install
 
   # we automatically cache and restore many dependencies between
   # builds. If you need to, you can add custom paths to cache:
   cache_directories:
-      - "~/.npm"
       - "~/.m2"
       - "~/.ivy2"
       - "~/.sbt"
