--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,8 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
+    - git config --global user.name "Circle CI"
+    - git config --global user.email "bot@wiz-net.jp"
     - npm install -g grunt-cli bower
     - bundle install
     - cd ui/Front && npm install && bower install
